@@ -1,5 +1,9 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2001-05-28 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* Priority.hh: included workaround for #define ERROR rudeness in 
+	  windows.h on Win32.
+	
 2001-05-23 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* log4cpp.spec.in: run ldconfig after install or uninstall. Upped 
 	  release# to 3.
